# EasyVPN

./: .env.dev  .gitignore  CHANGELOG.md  EasyVPN.sln  LICENSE  README-EN.md  README.en_EN.md  README.md  README.ru_RU.md  docker-compose.yml  nginx.conf  r.sh
.github/workflows/: amneziawg-vpn-build.yml  amneziawg-zsv-build.yml  backend-build.yml  backend-tests.yml  bot-build.yml  dev-deploy.yml  frontend-build.yml  prod-deploy.yml  publish-release.yml  test  test-single-deploy.yml  vlessproxy-vpn-build.yml  wireguard-vpn-build.yml
.scripts/: Dockerfile  README.en_EN.md  README.md  publish.sh  release.sh  set-global-version.sh
backend/: Dockerfile  EasyVPN.sln  EasyZSV.sln  README.en_EN.md  README.md
backend/EasyVPN.Application.UnitTests/: EasyVPN.Application.UnitTests.csproj
backend/requests/: http-client.env.json
backend/requests/Authentication/: Check.http  Login.http
backend/requests/ConnectionTickets/: ClientGetTickets.http  PaymentConfirmDaysTicket.http  PaymentConfirmTicket.http  PaymentGetClientTickets.http  PaymentGetTickets.http  PaymentRejectTicket.http
backend/requests/Connections/: AdminCreateConnection.http  AdminGetClientConnections.http  AdminGetConfig.http  AdminGetConnections.http  AdminResetLifetimeConnection.http  ClientCreateConnection.http  ClientDeleteConnection.http  ClientExtendConnection.http  ClientGetConfig.http  ClientGetConnections.http  Connections.http  GetConfig.http  PaymentConfirmTicket.http  PaymentRejectTicket.http  PaymentReviewerAddLifetimeConnection.http  PaymentReviewerConfirmConnection.http  PaymentReviewerDeleteConnection.http  PaymentReviewerResetLifetimeConnection.http
backend/src/EasyVPN.Api/: DependencyInjection.cs  EasyVPN.Api.csproj  Program.cs  StartupExtensions.cs  appsettings.Development.json  appsettings.json
backend/src/EasyVPN.Application/: DependencyInjection.cs  EasyVPN.Application.csproj
backend/src/EasyVPN.Contracts/: EasyVPN.Contracts.csproj
backend/src/EasyVPN.Domain/: EasyVPN.Domain.csproj
backend/src/EasyVPN.Infrastructure/: DependencyInjection.cs  EasyVPN.Infrastructure.csproj
frontend/: .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.en_EN.md  README.md  README.ru_RU.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  site.webmanifest
frontend/src/: App.css  App.tsx  config.json  config.ts  index.test.ts  index.tsx
img/: Untitled Diagram.drawio
init/: .env.example  Dockerfile  README.en_EN.md  README.md  init.sh
init/dynamic-pages/: Главная страница.main.mdx  ❓ FAQ.FAQuestions.mdx  🌐 Overview EasyVPN.main.mdx
requests/: Register.http  http-client.env.json
requests/Authentication/: Login.http
responses/: LoginOrRegister.json
scripts/: publish.sh  release.sh  set-global-version.sh
services/: README.en_EN.md  README.md
services/AmneziaWgVpn/: Dockerfile  README.en_EN.md  README.md  go.mod
services/TelegramBot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.en_EN.md  README.md  README.ru_RU.md  main.py  pyproject.toml
services/TelegramBot/bot/: __main__.py
services/TelegramBot/bot/core/: config.py  loader.py
services/TelegramBot/bot/database/: database.py
services/TelegramBot/bot/database/models/: base.py  user.py
services/TelegramBot/bot/handlers/: __init__.py  help.py  start.py
services/TelegramBot/bot/keyboards/: default_commands.py
services/TelegramBot/bot/keyboards/inline/: menu.py
services/TelegramBot/bot/locales/en/LC_MESSAGES/: messages.po
services/TelegramBot/bot/locales/ru/LC_MESSAGES/: messages.po
services/TelegramBot/bot/middlewares/: __init__.py  auth.py  database.py  i18n.py
services/TelegramBot/bot/services/: users.py
services/TelegramBot/bot/utils/: command.py
services/VLESSProxy/: .env.template  Dockerfile  README.en_EN.md  README.md  go.mod  go.sum
services/WireguardVpn/: .env.example  .gitignore  Dockerfile  README.en_EN.md  README.md  config.yml  go.mod  go.sum  server.go
services/WireguardZsv/: go.mod
src/EasyVPN.Api/: EasyVPN.Api.csproj  Program.cs  WeatherForecast.cs
src/EasyVPN.Application/: Class1.cs  DependencyInjection.cs  EasyVPN.Application.csproj
src/EasyVPN.Client/: index.html
src/EasyVPN.Contracts/: Class1.cs
src/EasyVPN.Domain/: Class1.cs
src/EasyVPN.Infrastructure/: Class1.cs  DependencyInjection.cs  EasyVPN.Infrastructure.csproj
(+669 files in other folders)
