[tool.poetry]
name = "easy-vpn-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Alex Poryadin <alex.poryadih@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"

[tool.poetry.scripts]
start = "main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"