[project]
name = "easy-vpn-telegram-bot"
version = "1.1.0"
description = "Telegram Notification Bot for Easy VPN"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "sw1pr0g", email = "sw1pr0g.dev@gmail.com"},
]
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
bot = [
    "aiogram>=3.21.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.3",
    "uvloop>=0.21.0",
    "loguru>=0.7.3",
]
dev = [
    "ruff>=0.9.5,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "types-cachetools>=5.5.0.20240820,<6.0.0.0",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "ANN401", "FIX002", "COM812", "ISC001", "FBT001", "FBT002", "ERA", "ARG005", "PGH003", "A005"]
cache-dir = "/tmp/ruff-cache/"
extend-exclude = ["logs", "configs", "migrations"]

[tool.ruff.lint.isort]
no-lines-before = ["future", "standard-library"]
known-local-folder = ["bot", "admin"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.mypy]
python_version = "3.10"
files = "bot/*.py"
plugins = ["pydantic.mypy"]
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
